@@ -1,6 +1,6 @@
-{% load i18n %}
+{% load i18n wagtailadmin_tags %}
 
-<form action="{% url 'wagtaildocs:edit_multiple' doc.id %}" method="POST" enctype="multipart/form-data">
+<form action="{% url 'wagtaildocs:edit_multiple' doc.id %}" method="POST" enctype="multipart/form-data" {% novalidate_on_django_1_10 %}>
     <ul class="fields">
         {% csrf_token %}
         {% for field in form %}
